fixed z-index nav and grammer

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -92,6 +92,6 @@ svg {
   bottom: -10px;
   left: 0px;
   width: 100%;
-  z-index: 3;
+  z-index: 2;
   fill: $white;
 }
