--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -13,7 +13,7 @@ header {
   position: fixed;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 2;
+  z-index: 3;
   nav {
     flex-grow: 1;
     min-width: 375px;
